docs: Updated ADR-001 (more detailed)

--- a/docs/architecture/adr/ADR-001.md
+++ b/docs/architecture/adr/ADR-001.md
@@ -1,256 +1,415 @@
-# ADR-001: App Architecture
+# ADR-001: Overall Architecture Pattern
+
 **Status:** Accepted  
-**Date:** 2026-01-21
-**Author:** Fedor Terekhov (FterDev)  
+**Date:** 2026-01-25
+**Author:** Fedor Terekhov (FterDev)
 
 ## Context
 
-The current ADR handles the first point of the system architecture definition:
+Hopen is a headless CMS designed for runtime schema definition and self-hosting. 
+As the codebase grows from MVP to a feature-rich application, we need an 
+architectural pattern that provides structure without hindering development speed.
 
-Overall Architecture Pattern
+**The Problem:**
 
-    Layered architecture (API → Business Logic → Data Access)
-    Clean Architecture / Onion Architecture
-    CQRS considerations
-    Hybrid
+Without a clear architecture, code organization deteriorates:
+- Business logic scatters across controllers, services, and repositories
+- Contributors struggle to locate where functionality belongs
+- Testing becomes difficult without clear boundaries
+- Spaghetti code emerges as features intertwine
+- Refactoring becomes risky and time-consuming
 
-It will define how the application should be splitted into different modules and is the base for future architecture diagrams and planning.
+**Project Constraints:**
 
-Important! UI is to be ignored at this point, as it's irrelevant for the main bussiness logic and system architecture.
+**Solo start with open source future:**
+The project begins as a solo endeavor but is designed for contributors. The 
+architecture must be approachable for new developers while providing enough 
+structure to prevent chaos.
+
+**Speed matters:**
+MVP needs to ship quickly. Over-engineering upfront would delay delivery. The 
+architecture should enable rapid development in early stages while supporting 
+future complexity.
+
+**Testing is essential:**
+As an open source project, automated tests are critical for confident 
+refactoring and reviewing contributions. The architecture must facilitate 
+testing without excessive mocking complexity.
+
+**Collaboration structure:**
+Clear separation of concerns prevents contributors from stepping on each other's 
+toes. Well-defined boundaries enable parallel development and reduce merge conflicts.
+
+**Key Questions to Answer:**
+
+1. How do we organize code to prevent spaghetti?
+2. How do we balance structure with development speed?
+3. How do we make the codebase approachable for contributors?
+4. How do we ensure testability without excessive boilerplate?
+5. How do we enable future evolution (scaling, microservices, CQRS)?
+
+---
 
 ## Decision
 
+We will use a **Pragmatic Hybrid Architecture** inspired by Clean Architecture 
+principles but optimized for development speed and contributor friendliness.
 
+**Project Structure:**
+
+```
+Hopen.Core/                         # DOMAIN LAYER
+  Entities/
+    ContentType.cs
+    Content.cs
+    User.cs
+  Interfaces/
+    Repositories/
+      IContentTypeRepository.cs
+      IContentRepository.cs
+
+Hopen.Application/                  # APPLICATION LAYER
+  Interfaces/
+    Services/
+      IContentTypeService.cs
+      IContentService.cs
+      
+  Features/                         # Feature-based organization
+    ContentTypes/
+      Services/
+        ContentTypeService.cs
+      DTOs/
+        ContentTypeDto.cs
+        CreateContentTypeDto.cs
+      Validators/
+        CreateContentTypeValidator.cs
+    Content/
+      Services/
+      DTOs/
+      Validators/
+
+Hopen.Infrastructure/               # INFRASTRUCTURE LAYER
+  Data/
+    HopenDbContext.cs
+    Repositories/
+      ContentTypeRepository.cs
+  External/
+    EmailService.cs
+
+Hopen.Api/                          # PRESENTATION LAYER
+  Controllers/
+    ContentTypesController.cs
+    ContentController.cs
+  Middleware/
+  Configuration/
+```
+
+**Dependency Rules:**
+
+```
+Core (Domain)
+  └─ Entities + Repository Interfaces
+  └─ Zero external dependencies
+
+Application
+  └─ depends on Core
+  └─ Service Interfaces + Implementations
+  └─ DTOs, Validators
+  └─ Feature-based organization
+
+Infrastructure
+  └─ depends on Core (implements Repository Interfaces)
+  └─ depends on Application (for service dependencies if needed)
+  
+Api
+  └─ depends on Application (uses Service Interfaces)
+  └─ depends on Infrastructure (for DI registration)
+```
+
+**Layer Responsibilities:**
+
+**Core (Domain):**
+- Domain entities (ContentType, Content, User)
+- Repository interface definitions
+- Pure domain logic (no frameworks, no external dependencies)
+
+**Application (Use Cases):**
+- Service interfaces (IContentTypeService defines use cases)
+- Service implementations (business logic orchestration)
+- DTOs (data transfer objects for API contracts)
+- Validators (business rule enforcement)
+- Feature-based folders (ContentTypes, Content, Auth, Media)
+
+**Infrastructure (External Concerns):**
+- Repository implementations (EF Core, database access)
+- External service integrations (email, file storage, etc.)
+- Framework-specific implementations
+
+**Api (Presentation):**
+- Controllers (HTTP endpoints)
+- Middleware (authentication, error handling, logging)
+- Configuration (dependency injection, API versioning)
+
+---
 
 ## Options Considered
 
-### Classic Layered Architecture
+### Option 1: Clean Architecture (Strict)
 
 **Description:**
+Pure Clean Architecture with strict dependency inversion. All abstractions in 
+the domain core, implementations in outer layers. Use cases modeled as explicit 
+command/query objects with dedicated handlers.
 
-Traditional three-layer architecture with clear horizontal separation between 
-presentation, business logic, and data access. Each layer can only depend on 
-the layer directly below it.
-
-The app is separated into layers as following:
-
-Presentation(API) -> Business Logic (Services) -> Data Access (Repositories) -> Database
-
-It's the most common approach for small applications and leads very fast to a productive version and the planning by it self can be kept very simple. With the simplicity a side effect occurs. If the app stays in the simple version such an architeture is not a problem, but if the app grows and gets more features it's harder to keep the overview and with all the services and repositories it can very fast lead to spaghetti code. If the app grows and scalability becomes an important point it will be hard to extract some features to make those scaleable. Also it's easy to work at such projects as long as there are a few developers working on it or optimally one. With more people working on a such project more conflicts will occure.
+**Structure:**
+```
+Domain Core (Entities, Interfaces, Commands, Queries)
+  ↑
+Application (Command/Query Handlers)
+  ↑
+Infrastructure (Implementations)
+  ↑
+Presentation (API, UI)
+```
 
 **Pros:**
-- Simplicity: Easy to understand and implement quickly
-- Familiarity: Most developers know this pattern
-- Fast initial development: Less boilerplate, get productive immediately
-- Clear separation: Each layer has obvious responsibilities
-- Tooling support: Works naturally with EF Core and ASP.NET patterns
-- Easy onboarding: New contributors can start quickly
+- Maximum testability through complete abstraction
+- Framework independence at domain level
+- Clear boundaries enforced by dependency rules
+- Scales well to large, complex systems
+- Supports advanced patterns (Domain Events, CQRS)
 
 **Cons:**
-- Tight coupling: Layers depend on concrete implementations below
-- Testing challenges: Hard to test business logic without database
-- Less flexible: Difficult to swap out data access layer
-- Anemic domain: Business logic often scattered across services
-- Layer violations: Easy to accidentally create dependencies across layers
-- Scalability limits: Can become monolithic and hard to split
-
-**Trade-offs:**
-- Development speed vs. architectural purity
-- Pragmatism vs. testability
-- Immediate productivity vs. long-term flexibility
+- High initial complexity and boilerplate
+- Command/Query objects for every operation
+- Steep learning curve for contributors
+- Slower initial development
+- Can feel over-engineered for straightforward CRUD
+- Requires strict discipline to maintain boundaries
 
 ---
 
-### Option 2: Clean Architecture / Onion
+### Option 2: CQRS (Command Query Responsibility Segregation)
 
 **Description:**
-
-Dependency inversion-based architecture where the domain core is isolated 
-from external concerns. Dependencies point inward toward the domain, never 
-outward. External systems (database, APIs, UI) depend on the core, not 
-vice versa.
+Separate models and handlers for commands (writes) and queries (reads). 
+Operations are explicit, routed through a mediator pattern (e.g., MediatR).
 
 **Structure:**
-- **Domain Core**: Entities, value objects, domain interfaces (no dependencies)
-- **Application Layer**: Use cases, business logic, application services
-- **Infrastructure**: Database access, external APIs, file system
-- **Presentation**: API controllers, middleware, configuration
+```
+Commands (CreateContentType, UpdateContent)
+  ↓
+Command Handlers
+  ↓
+Write Model
+
+Queries (GetContentTypes, SearchContent)
+  ↓
+Query Handlers
+  ↓
+Read Model (can be different from write model)
+```
 
 **Pros:**
-- Testability: Core business logic can be tested without external dependencies
-- Maintainability: Clear separation of concerns, easy to locate code
-- Flexibility: Easy to swap infrastructure (e.g., change database)
-- Framework independence: Domain logic doesn't depend on .NET specifics
-- Professional appearance: Demonstrates architectural maturity for contributors
-- Scalability: Structure scales well as project grows
+- Extremely scalable (read/write can scale independently)
+- Clear operation boundaries (each use case is explicit)
+- Performance optimization opportunities (separate read models)
+- Testability (handlers are small, focused units)
+- Supports event sourcing and complex workflows
 
 **Cons:**
-- Boilerplate overhead: More files, interfaces, and mapping code
-- Steeper learning curve: Contributors need to understand the pattern
-- Slower initial development: More upfront setup required
-- Can be overkill: For simple CRUD operations, adds unnecessary complexity
-- Requires discipline: Easy to violate boundaries without strict reviews
+- Significant complexity overhead
+- Handler for every single operation
+- Mediator pattern adds indirection
+- Debugging is more difficult
+- Overkill for standard CRUD operations
+- Eventual consistency challenges if using separate stores
 
-**Trade-offs:**
-- Code organization vs. development speed
-- Testability vs. simplicity
-- Long-term maintainability vs. short-term productivity
-  
 ---
 
-### Option 3: Command Query Responsibility Segregation 
+### Option 3: Pragmatic Hybrid (CHOSEN)
 
 **Description:**
-Separates read operations (queries) from write operations (commands) into 
-distinct models and handlers. Commands modify state, queries return data. 
-Each operation has a dedicated handler, typically using the Mediator pattern.
+Clean Architecture principles without dogmatic enforcement. Dependency inversion 
+where it matters, pragmatic decisions elsewhere. Service-based instead of 
+command/query-based. Feature folders for organization.
 
 **Structure:**
-- **Commands**: CreateContentType, UpdateContent, DeleteContent
-- **Command Handlers**: Execute business logic, validate, persist changes
-- **Queries**: GetContentTypes, GetContentById, SearchContent
-- **Query Handlers**: Optimize for read performance, return DTOs
-- **Mediator**: Routes commands/queries to appropriate handlers (e.g., MediatR)
+```
+Core: Entities + Repository Interfaces
+Application: Service Interfaces + Implementations + DTOs (feature-based)
+Infrastructure: Repository Implementations + External Services
+Api: Controllers + Middleware
+```
 
 **Pros:**
-- Performance optimization: Read and write models can be optimized independently
-- Scalability: Easy to scale reads and writes separately
-- Clarity: Each operation is explicit and isolated
-- Testability: Handlers are small, focused, easy to test
-- Flexibility: Can use different data stores for reads vs writes
-- Extensibility: Easy to add new operations without modifying existing code
+- Balanced structure without excessive boilerplate
+- Faster development than strict Clean Architecture
+- Testable through service and repository interfaces
+- Feature-based organization aids navigation
+- Can evolve to stricter patterns (CQRS) later
+- Approachable for contributors familiar with layered architectures
+- Clear separation of concerns without over-abstraction
 
 **Cons:**
-- Complexity: More moving parts, more code to maintain
-- Boilerplate: Handler for every single operation
-- Learning curve: Contributors need to understand CQRS pattern
-- Debugging difficulty: Request flow through mediator harder to trace
-- Eventual consistency: If using separate read models, data may lag
-- Overkill for simple CRUD: Adds overhead for straightforward operations
+- Not a "recognized pattern" (requires explanation)
+- Easier to violate architectural boundaries than strict approaches
+- Requires documentation of conventions
+- Service interfaces in Application (not Core) - less "pure"
+- Contributors need guidance on where code belongs
 
 **Trade-offs:**
-- Scalability and performance vs. complexity
-- Explicit operations vs. development speed
-- Future flexibility vs. immediate simplicity
-
-### Option 4: Hybrid - Clean-ish Layered
-
-**Description:**
-
-Combines the simplicity of layered architecture with key Clean Architecture 
-principles. Uses dependency inversion where it matters (interfaces in core, 
-implementations in infrastructure) but avoids dogmatic separation. Prioritizes 
-pragmatism over architectural purity.
-
-**Structure:**
-- **Hopen.Core**: Domain entities, interfaces, business logic, DTOs
-- **Hopen.Infrastructure**: EF Core, repositories, external services
-- **Hopen.Api**: Controllers, middleware, authentication, configuration
-  
-**Dependency Rules:**
-- Core has zero external dependencies
-- Infrastructure depends on Core (implements interfaces)
-- Api depends on both Core and Infrastructure
-
-
-**Pros:**
-- Balanced approach: Structure without excessive boilerplate
-- Faster development: Less ceremony than full Clean Architecture
-- Easy to understand: Simpler mental model for contributors
-- Testability: Core business logic can be tested in isolation
-- Flexibility: Can evolve toward full Clean Architecture later
-- Pragmatic: Use interfaces where valuable, skip where unnecessary
-  
-**Cons:**
-- Less strict boundaries: Easier to violate architectural rules
-- Requires discipline: No framework enforcement of conventions
-- "Gray areas": Unclear where some code belongs without strict guidelines
-- Documentation needed: Must clearly communicate conventions
-- Inconsistency risk: Different developers may interpret rules differently
-- Not a "recognized pattern": Harder to explain as "we use X architecture"
-
-**Trade-offs:**
-- Flexibility vs. strict architectural boundaries
-- Pragmatism vs. pattern recognition
-- Quick wins vs. long-term consistency
+- Pragmatism over architectural purity
+- Development speed over perfect abstraction
+- Contributor friendliness over framework independence
 
 ---
 
 ## Rationale
 
-We chose the Pragmatic Layered with Clean Principles (Hybrid) approach, with a 
-clear path toward full Clean Architecture as the project matures.
+**Structure for collaboration:**
+Clear architectural boundaries prevent spaghetti code. Contributors immediately 
+understand where to add new features (Application/Features), where entities live 
+(Core/Entities), and how to integrate external systems (Infrastructure). This 
+reduces onboarding time and merge conflicts.
 
-**Key deciding factors:**
+**Business logic centralization:**
+Application layer contains all business logic in feature-based folders. Services 
+orchestrate use cases, validators enforce rules, DTOs define contracts. This 
+centralization makes it easy to locate and modify business behavior without 
+hunting through controllers or repositories.
 
-**Immediate productivity while maintaining quality:**
-The hybrid approach allows rapid MVP development without sacrificing long-term 
-architectural health. We can ship features quickly while maintaining clear 
-separation of concerns.
+**Testability through interfaces:**
+Repository interfaces in Core and Service interfaces in Application enable unit 
+testing without database dependencies. Controllers can be tested with mocked 
+services. Services can be tested with mocked repositories. This facilitates 
+test-driven development and confident refactoring.
 
-**Open source readiness:**
-While starting as a solo project, Hopen is designed for contributors. The 
-hybrid approach provides enough structure for contributors to understand where 
-code belongs, without overwhelming them with full Clean Architecture complexity 
-upfront.
+**DTOs as business contracts:**
+DTOs belong in Application because they represent application-level concerns: 
+what data does the API need? How should validation work? DTOs are not domain 
+concepts (Core) but use-case contracts (Application). This keeps Core focused 
+on pure domain modeling.
 
-**Evolutionary architecture:**
-By starting with Core (domain) and Application (use cases) separated from day 
-one, we establish the foundation for Clean Architecture. As business logic 
-grows more complex, we can gradually enforce stricter boundaries without 
-major refactoring.
+**Evolution path to CQRS:**
+The structure supports future migration to CQRS if needed:
+- Services can be split into CommandHandlers and QueryHandlers
+- DTOs can evolve to Commands and Queries
+- Current structure maps naturally to CQRS patterns
+This provides an escape hatch if complexity demands more sophisticated patterns.
 
-**Project structure:**
-```
-Hopen.Core/          # Domain entities, value objects
-Hopen.Application/   # Business logic, use cases, interfaces
-Hopen.Infrastructure/ # EF Core, external services, implementations
-Hopen.Api/           # Presentation layer
-```
+**Why not strict Clean Architecture:**
+Strict Clean requires Commands/Queries for every operation, significantly 
+increasing boilerplate. For a CMS with straightforward CRUD operations, this 
+overhead doesn't provide proportional value. We can adopt stricter patterns 
+incrementally as specific features demand them.
 
-This separation maintains Clean Architecture's core principle (dependency 
-inversion) while avoiding excessive boilerplate in early stages.
+**Why not CQRS upfront:**
+CQRS is powerful but adds substantial complexity. Hopen's MVP doesn't have the 
+scale or complexity to justify separate read/write models and mediator patterns. 
+Starting with services is more pragmatic; CQRS can be introduced for specific 
+high-complexity features later.
 
-**Migration path:**
-As the project grows in complexity or contributor count increases, we can 
-incrementally adopt stricter Clean Architecture patterns (detailed use case 
-handlers, CQRS for complex operations, domain events) without architectural 
-rewrites.
+**Feature-based organization:**
+Application/Features folders group related code (services, DTOs, validators) by 
+feature rather than by technical layer. This improves cohesion: everything about 
+ContentTypes lives together. It also supports potential extraction to microservices 
+if Hopen scales beyond a monolith.
+
+**The pragmatic trade-off:**
+We sacrifice some architectural purity (service interfaces not in Core, DTOs in 
+Application) for tangible benefits: faster development, easier onboarding, less 
+boilerplate. This aligns with Hopen's goals: ship quickly, stay maintainable, 
+welcome contributors.
+
+---
 
 ## Consequences
 
 ### Positive
-- Fast initial development while maintaining architectural quality
-- Clear project structure guides contributors where to add code
-- Core business logic testable without infrastructure dependencies
-- Can evolve to full Clean Architecture without breaking changes
-- Dependency inversion established from day one
-- Professional appearance for portfolio and potential contributors
-- Flexibility to make pragmatic decisions when strict patterns add no value
 
+- **Business logic centralized:** All use cases, validation, and orchestration 
+  live in Application layer, making behavior easy to locate and modify
+- **Testability maintained:** Interfaces enable unit testing without external 
+  dependencies (database, APIs, etc.)
+- **Clear code organization:** Contributors immediately know where code belongs 
+  (Core for domain, Application for use cases, Infrastructure for I/O)
+- **Feature-based structure:** Related code grouped together improves cohesion 
+  and supports future microservice extraction
+- **DTOs in business layer:** DTOs represent application contracts and naturally 
+  belong with use cases, not domain entities
+- **Evolution to CQRS possible:** Current structure supports migration to command/query 
+  patterns if complexity grows
+- **Reduced boilerplate:** Avoids command/query objects for simple CRUD, 
+  accelerating development
+- **Contributor friendly:** Pattern is more approachable than strict Clean 
+  Architecture or CQRS
+- **Dependency inversion:** Core has no dependencies, enabling clean testing and 
+  flexibility
 
 ### Negative
-- Requires active documentation of conventions and boundaries
-- Risk of architectural drift without code review discipline
-- Not a "standard" pattern - needs explanation in contributing guide
-- Gray areas where code placement isn't immediately obvious
-- Must resist temptation to violate boundaries for quick fixes
-- Contributors may need guidance on when to use interfaces vs concrete types
-  
+
+- **Requires clear rules:** Without strict enforcement, boundaries can be violated 
+  (e.g., controllers bypassing services, infrastructure leaking into application)
+- **Not a standard pattern:** "Pragmatic Hybrid" requires explanation and 
+  documentation for contributors
+- **Service interfaces not in Core:** Purists will note that use case abstractions 
+  "should" live in domain layer
+- **Potential inconsistency:** Developers may interpret "pragmatic" differently, 
+  leading to architectural drift without code reviews
+- **Documentation burden:** Conventions must be clearly documented (where do 
+  interfaces go? when to use DTOs vs entities?)
+
 ### Neutral
-- Architecture will evolve as project matures - documented in future ADRs
-- Some operations may use simplified patterns while others follow strict Clean
-- Team needs to accept that consistency will improve over time
-- Code reviews must balance pragmatism with architectural principles
+
+- **Pragmatic approach traded for speed:** We accept less architectural purity 
+  in exchange for faster initial development
+- **Evolution expected:** Architecture will become stricter as project matures 
+  and complexity increases
+- **Feature folders may feel unconventional:** Some developers expect technical 
+  layers (Services/, DTOs/) rather than feature folders
+- **Testing strategy flexible:** Can use unit tests (mocked dependencies) or 
+  integration tests (real dependencies) based on need
+
+---
 
 ## Implementation Notes
 
-[Optional - How to implement this decision] -> TBD
+**Project Setup:**
+
+1. Create solution with 4 projects: Core, Application, Infrastructure, Api
+2. Configure dependencies: Core ← Application ← Infrastructure ← Api
+3. Establish folder structure in Application (Interfaces/, Features/)
+4. Document conventions in CONTRIBUTING.md
+
+**Dependency Injection Registration:**
+
+Register services by layer in Api/Program.cs:
+- Core: No registration (entities, interfaces only)
+- Application: Register services (Scoped: IContentTypeService → ContentTypeService)
+- Infrastructure: Register repositories, DbContext, external services
+
+**Code Organization Rules:**
+
+- Core: Only entities and repository interfaces, zero dependencies
+- Application: Services implement use cases, DTOs define contracts, validators 
+  enforce rules
+- Infrastructure: Repositories implement Core interfaces using EF Core
+- Api: Controllers use Application service interfaces, never directly access 
+  repositories
+
+**Testing Approach:**
+
+- Unit test services with mocked repositories
+- Unit test controllers with mocked services
+- Integration test repositories with Testcontainers
+- End-to-end test API with WebApplicationFactory
+
+---
 
 ## References
 
-https://learn.microsoft.com/en-us/azure/architecture/patterns/cqrs
-https://mdamranhossain.substack.com/p/clean-architecture-vs-onion-architecture
-https://www.geeksforgeeks.org/system-design/design-patterns-architecture/
-https://www.geeksforgeeks.org/system-design/design-patterns-architecture/#cqrs-command-query-responsibility-segregation
-
+- [Clean Architecture by Robert C. Martin](https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html)
+- [CQRS Pattern](https://learn.microsoft.com/en-us/azure/architecture/patterns/cqrs)
+- [Feature Folders in ASP.NET](https://www.kamilgrzybek.com/blog/posts/simple-cqrs-implementation-raw-sql-ddd)
+- [Pragmatic Clean Architecture](https://blog.cleancoder.com/uncle-bob/2016/01/04/ALittleArchitecture.html)
