docs: Accepted ADR-003

--- a/docs/architecture/adr/ADR-003.md
+++ b/docs/architecture/adr/ADR-003.md
@@ -1,6 +1,6 @@
 # ADR-003: Dynamic Content Type Storage Strategy
 
-**Status:** Proposed  
+**Status:** Accepted  
 **Date:** 2026-01-27
 **Author:** Fedor Terekhov (FterDev)
 
